// Vitest Snapshot v1

exports[`Divider > :props > align 1`] = `
<div
  class="t-divider t-divider--hairline"
  role="separator"
>
  <!---->
</div>
`;

exports[`Divider > :props > align 2`] = `
<div
  class="t-divider t-divider--hairline"
  role="separator"
>
  <!---->
</div>
`;

exports[`Divider > :props > align 3`] = `
<div
  class="t-divider t-divider--hairline"
  role="separator"
>
  <!---->
</div>
`;

exports[`Divider > :props > content 1`] = `
<div
  class="t-divider t-divider--hairline t-divider--content-center"
  role="separator"
>
  <div>
    text
  </div>
</div>
`;

exports[`Divider > :props > content 2`] = `
<div
  class="t-divider t-divider--hairline t-divider--content-center"
  role="separator"
>
  text
</div>
`;

exports[`Divider > :props > dashed 1`] = `
<div
  class="t-divider t-divider--hairline t-divider--dashed"
  role="separator"
>
  <!---->
</div>
`;

exports[`Divider > :props > default 1`] = `
<div
  class="t-divider t-divider--hairline t-divider--content-center"
  role="separator"
>
  <div>
    text
  </div>
</div>
`;

exports[`Divider > :props > default 2`] = `
<div
  class="t-divider t-divider--hairline t-divider--content-center"
  role="separator"
>
  text
</div>
`;

exports[`Divider > :props > layout 1`] = `
<div
  class="t-divider t-divider--hairline"
  role="separator"
>
  <!---->
</div>
`;

exports[`Divider > :props > layout 2`] = `
<div
  class="t-divider t-divider--hairline t-divider-vertical"
  role="separator"
>
  <!---->
</div>
`;

exports[`Divider > :props > lineColor 1`] = `
<div
  class="t-divider t-divider--hairline"
  role="separator"
>
  <!---->
</div>
`;
